[package]
name = "filecrypt"
version = "0.1.3"
edition = "2021"
repository = "https://github.com/root27/filecrypt"
description = "Encrypt and decrypt files using Fernet symmetric encryption"
license = "MIT"
keywords = ["encryption", "fernet", "file", "cli"]
authors = ["root27"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
clap = { version = "4.5.4", features = ["derive"] }
fernet = "0.2.1"
ring = "0.17.8"
